Fixed text chat overflow

--- a/css/totalPure.css
+++ b/css/totalPure.css
@@ -483,3 +483,7 @@ video {
 #header {
 	z-index:1001;
 }
+
+#viewText {
+	overflow:auto;
+}
